persistant_volume_jupyter/jupyterlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jupyterlab-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jupyterlab-app
    spec:
      containers:
      - name: jupyterlab-app
        image: sekharbuddha/testkube:jupyterserver
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /workspace  # Path inside the container
          name: jupyterlab-storage
      volumes:
      - name: jupyterlab-storage
        persistentVolumeClaim:
          claimName: jupyterlab-pvc
