persistant_volume_jupyter/jupyterlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab-service
  namespace: default
spec:
  selector:
    app: jupyterlab-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30088
  type: NodePort
