persistant_volume_jupyter/ingress-sekhar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sekhar-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: dhana.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab-service  # Replace with your service name
            port:
              number: 8888
